2011-11-21  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpdis.c:
    fixed bug #3440413: gpasm fails to build gpsim test cases

2011-11-20  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: fixed bug #3437346: Information missing from list file
  * include/stdhdr.h: updated GPUTILS_COPYRIGHT_STRING

2011-11-18  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpcofflink.c:
    fixed first part of bug #3439778: gplink fails to allocate sections

2011-11-12  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, libgputils/gpdis.c: fixed compilation warnings
  * libgputils/gpcofflink.c: fixed bug #3435767: gplink segfaults

2011-11-12  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, doc/gputils.lyx:
    added support for pic 14 bit enhanced devices supported by mpasmx 5.42,
    thanks to Gal Zsolt.
  * libgputils/gpprocessor.c, header/p12f683.inc, lkr/12f683_g.lkr,
    lkr/Makefile.am, lkr/Makefile.in:
    fixed bug #2822266: TMR1GE bit missing for T1CON on 12f683
    12f683 lkr and inc files updated to mpasmx 5.42 version

2011-11-11  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx, configure.ac, configure: version changed to 0.14.1
  * doc/gputils.lyx: listed all enhanced 14 bit devices supported by MPASM 5.43

2011-11-10  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/coff.c, libgputils/gpwriteobj.c: SHADOW support fixes
  * gplink/script.c: shadow option re-enabled

2011-11-08  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    added support for all pic 14 bit enhanced devices supported by MPASM 5.43,
    thanks to Gal Zsolt.
  * gplink/script.c: shadow option temporarily disabled

2011-10-28  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpdasm.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h: